[package]
name = "tree-sitter-regedit"
description = "Regedit tree sitter grammar"
version = "0.1.0"
authors = ["Jason Ghantous <jason.ghantous@outlook.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "regedit"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jasongh17/tree-sitter-regedit"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
